--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         {
             "name": "\"Schneider Chéry\"",
             "email": "schneiderchery7@gmail.com"
+        },
+        {
+            "name": "\"Jean Louis Fils François\"",
+            "email": "francois.jeanlouuisfils@gmail.com"
         }
     ],
 
