--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         },
         {
             "name": "\"Jean Louis Fils François\"",
-            "email": "francois.jeanlouuisfils@gmail.com"
+            "email": "francois.jeanlouisfils@gmail.com"
         }
     ],
 
